<resources>
    <string name="app_name">AQM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="sensor_values">Sensor Values:</string>
    <string name="title_activity_live_monitoring">LiveMonitoring</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="SharedPreferences">Shared Preferences</string>
    <string name="LocationHint">Enter Location Name</string>
    <string name="RoomHint">Enter Room Name</string>
    <string name="LocationEditText">Location Edit</string>
    <string name="RoomEditText">Room Edit</string>
    <string name="InnerSpinner">Inner Spinner Value</string>
    <string name="InnerSpinnerGas">Inner Spinner Gas</string>
    <string name="MiddleSpinner">Middle Spinner Value</string>
    <string name="MiddleSpinnerGas">Middle Spinner Gas</string>
    <string name="OuterSpinner">Outer Spinner Value</string>
    <string name="OuterSpinnerGas">Outer Spinner Gas</string>
    <string name="DatabaseFilter">Database Filter</string>
    <string name="EditButton">Edit</string>
    <string name="SaveButton">Save</string>
    <string name="InnerSpinnerText">Inner Ring Sensor Display</string>
    <string name="MiddleSpinnerText">Middle Ring Sensor Display</string>
    <string name="OuterSpinnerText">Outer Ring Sensor Display</string>
    <string name="LoginEmailText">Email Address</string>
    <string name="LiveMonitoringTextView">Live Monitoring</string>
    <string name="CO2TextView">Carbon Dioxide</string>
    <string name="AmmoniaTextView">Ammonia</string>
    <string name="LPGTextView">Liquefied Petroleum Gas</string>
    <string name="MethaneTextView">Methane</string>
    <string name="AlcoholTextView">Alcohol</string>
    <string name="CarbonMonoxideTextView">Carbon Monoxide</string>
    <string name="TvocTextView">Total Volatile Organic Compound</string>
    <string name="SettingsTextView">Settings</string>
    <string name="ChannelName">Alert Level</string>
    <string name="ChannelDescription">Channel to notify of Warning and Danger alert levels</string>

</resources>